replays/errorlog-20181107-020536-0500-1541574335-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    if not cell.is_occupied and cell.position is not ship.position and cell.position is not in current_targets:
                                                                                             ^
SyntaxError: invalid syntax

